annotations/3.1/_index.md
---
title: "Jakarta Annotations 3.1 (Under development)"
date: 2025-04-21
summary: "Release for Jakarta EE 12"
---
Jakarta Annotations defines a collection of annotations representing common semantic concepts that enable
a declarative style of programming that applies across a variety of Java technologies.

The purpose of this release is to introduce annotations for running workloads on virtual threads, such as @RunOnVirtualThread,
along with other annotations required by the Jakarta EE 12 platform.

### New features, enhancements or additions
<!-- List here -->
* **N/A**

### Removals, deprecations or backwards incompatible changes
<!-- List here -->
* **N/A**

### Minimum Java SE Version
<!-- Specify the minimum required Java SE version for this specification -->
**Java SE 11 or higher**

# Details

* [Jakarta Annotations 3.1 Release Record](https://projects.eclipse.org/projects/ee4j.ca/releases/3.1)
<!--
* [Jakarta Annotations 3.1 Specification Document](./annotations-spec-3.1.pdf) (PDF)
* [Jakarta Annotations 3.1 Specification Document](./annotations-spec-3.1.html) (HTML)
* [Jakarta Annotations 3.1 Javadoc](./apidocs)
* [Jakarta Annotations 3.1 TCK](https://download.eclipse.org/jakartaee/annotations/3.1/jakarta-annotations-tck-3.1.0.zip)  ([sig](https://download.eclipse.org/jakartaee/annotations/3.1/jakarta-annotations-tck-3.1.0.zip.sig),  [sha](https://download.eclipse.org/jakartaee/annotations/3.1/jakarta-annotations-tck-3.1.0.zip.sha256),  [pub](https://jakarta.ee/specifications/jakartaee-spec-committee.pub))
  * For all TCK releases, see [download directory](https://download.eclipse.org/jakartaee/annotations/3.1)
* Maven coordinates
    * [jakarta.annotation:jakarta.annotation-api:jar:3.1.0](https://central.sonatype.com/artifact/jakarta.annotation/jakarta.annotation-api/3.1.0/jar)

* Compatible Implementations used for [ratification](https://www.eclipse.org/projects/efsp/?version=1.2#efsp-ratification).
  * [To Be Determined](https://github.com)
-->

# Compatible Implementations

<!--
* [To Be Determined](https://github.com/)
-->

# Ballots

## Plan Review

The Specification Committee Ballot concluded successfully on 2025-05-05 with the following results.

| Representative                                 | Representative for: |  Vote   |
|------------------------------------------------|---------------------|---------|
| Kenji Kazumura                                 | Fujitsu             |   +1    |
| Emily Jiang, Tom Watson                        | IBM                 |   -1    |
| Ed Bratt, Dmitry Kornilov                      | Oracle              |   +1    |
| Andrew Pielage, Petr Aubrecht                  | Payara              |   +1    |
| David Blevins, Jean-Louis Monteiro             | Tomitribe           |   +1    |
| Ivar Grimstad                                  | EE4J PMC            |   +1    |
| Marcelo Ancelmo, Abraham Marin-Perez           | Participant Members | no vote |
| Werner Keil                                    | Committer Members   |   +1    |
| Jun Qian                                       | Enterprise Members  |   +1    |
| Zhai Luchao                                    | Enterprise Members  |   +1    |
|                                                | **Total**           |  **8**  |

Non-binding Votes
| Representative                                 | Representative for: |  Vote   |
|------------------------------------------------|---------------------|---------|
| Angelo Rubini                                  | Community           |   +1    |
| Michael Redlish                                | Community           |   +1    |
|                                                | **Total**           |  **2**  |

The ballot was run on the [jakarta.ee-spec mailing list](https://www.eclipse.org/lists/jakarta.ee-spec/msg03941.html)

<!--
## Release Review

The Release Review Specification Committee Ballot concluded successfully on YYYY-MM-DD with the following results.


The ballot was run on the [jakarta.ee-spec mailing list](https://www.eclipse.org/lists/jakarta.ee-spec/msgxxxx.html)
-->
